--- a/Intranet/Web.config
+++ b/Intranet/Web.config
@@ -67,7 +67,9 @@
   <location path="sunrise-default.aspx">
     <system.web>
       <authorization>
-        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo, NIZING\carina.liu, NIZING\dakai" />
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper
+               , NIZING\mandy.lo, NIZING\carina.liu, NIZING\dakai
+               , NIZING\luluchang" />
         <deny users="*" />
       </authorization>
     </system.web>
