--- a/Intranet/sunrise_intranet/Web.config
+++ b/Intranet/sunrise_intranet/Web.config
@@ -49,7 +49,7 @@
   <location path="PD_PurchaseInProgress.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai"/>
+        <deny users="NIZING\dakai, NIZING\luluchang"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -59,7 +59,7 @@
   <location path="SD_PastCostsAndPrices.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai"/>
+        <deny users="NIZING\dakai, NIZING\luluchang"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -69,7 +69,7 @@
   <location path="SD01.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai"/>
+        <deny users="NIZING\dakai, NIZING\luluchang"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -79,7 +79,7 @@
   <location path="SD03_OrderInProgress.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai"/>
+        <deny users="NIZING\dakai, NIZING\luluchang"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -89,7 +89,7 @@
   <location path="PD_PurchaseCostCalculator.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai"/>
+        <deny users="NIZING\dakai, NIZING\luluchang"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
