--- a/Intranet/sunrise_intranet/Web.config
+++ b/Intranet/sunrise_intranet/Web.config
@@ -16,18 +16,14 @@
     </handlers>
   </system.webServer>-->
   <connectionStrings>
-    <add name="NZConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
-    <!--<add name="NZConnectionString2" connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>-->
-    <add name="HR360ConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
-    <add name="ERP2ConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
-    <add name="RVIConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=RVI;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
-    <add name="SunriseConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRISE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
     <add name="SunrizeConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
+    <add name="SunrizeCustomConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE_CUSTOM;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <httpHandlers>
       <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
         validate="false" />
+      <add verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit"/>
     </httpHandlers>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
@@ -43,9 +39,30 @@
       </controls>
     </pages>
   </system.web>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <handlers>
+      <add name="AjaxFileUploadHandler" verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit"/>
+    </handlers>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="4294967295"/>
+      </requestFiltering>
+    </security>
+  </system.webServer>
   <system.web>
     <!--<customErrors mode="Off"/>-->
   </system.web>
+  <location path="InventorySearch.aspx">
+    <system.web>
+      <authorization>
+        <!--<deny users="NIZING\dakai, NIZING\luluchang"/>-->
+        <allow roles="NIZING\Domain Users"/>
+        <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <location path="PD_PurchaseInProgress.aspx">
     <system.web>
       <authorization>
