--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -1,9 +1,20 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
+  </appSettings>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
+    <handlers>
+      <remove name="ChartImageHandler" />
+      <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST"
+        path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </handlers>
+  </system.webServer>
   <connectionStrings>
     <add name="OQSConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=OQS;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
     <add name="NZConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
@@ -73,11 +84,17 @@
       </system.Web>
   -->
   <system.web>
+    <httpHandlers>
+      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        validate="false" />
+    </httpHandlers>
     <compilation debug="true" targetFramework="4.7.2"/>
     <!--<httpRuntime/>-->
     <pages controlRenderingCompatibilityVersion="4.0">
       <controls>
-        <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit"/>
+        <add tagPrefix="ajaxToolkit" namespace="AjaxControlToolkit" assembly="AjaxControlToolkit" />
+        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting"
+          assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </controls>
     </pages>
     <!--<httpRuntime executionTimeout="28800" maxRequestLength="4096" useFullyQualifiedRedirectUrl="false"
