--- a/Nizing/employee_section/report/Web.config
+++ b/Nizing/employee_section/report/Web.config
@@ -97,6 +97,24 @@
       </authorization>
     </system.web>
   </location>
+  <location path="SD_ProfitMarginByProductReport.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\業務部, NIZING\管理部"/>
+        <allow users="NIZING\mis, NIZING\chun"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="SD_SalesBonusCalculator.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部"/>
+        <allow users="NIZING\mis"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <!--採購部-->
   <location path="PurchaseReport.aspx">
     <system.web>
