--- a/Nizing/sunrise_employee_section/Web.config
+++ b/Nizing/sunrise_employee_section/Web.config
@@ -23,6 +23,7 @@
     <add name="RVIConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=RVI;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
     <add name="SunriseConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRISE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
     <add name="SunrizeConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
+    <add name="SunrizeCustomConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE_CUSTOM;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <httpHandlers>
