--- a/Intranet/Web.config
+++ b/Intranet/Web.config
@@ -42,7 +42,7 @@
   </system.web>
   <system.web>
     <customErrors mode="RemoteOnly" />
-    
+    <sessionState timeout="1"></sessionState>
   </system.web>
   <!--<runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
