--- a/Intranet/sunrise_intranet/Web.config
+++ b/Intranet/sunrise_intranet/Web.config
@@ -17,14 +17,14 @@
   </system.webServer>-->
   <connectionStrings>
     <add name="SunrizeConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
-    <add name="SunrizeCustomConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE_CUSTOM;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <httpHandlers>
       <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
         validate="false" />
-      <add verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit"/>
+      <!--<add verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit, Version=4.5.7.725, Culture=neutral, PublicKeyToken=28F01B0E84B6D53E" />-->
     </httpHandlers>
+    
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -39,7 +39,7 @@
       </controls>
     </pages>
   </system.web>
-  <system.webServer>
+  <!--<system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
       <add name="AjaxFileUploadHandler" verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler, AjaxControlToolkit"/>
@@ -49,7 +49,7 @@
         <requestLimits maxAllowedContentLength="4294967295"/>
       </requestFiltering>
     </security>
-  </system.webServer>
+  </system.webServer>-->
   <system.web>
     <!--<customErrors mode="Off"/>-->
   </system.web>
