--- a/Nizing/employee_section/report/Web.config
+++ b/Nizing/employee_section/report/Web.config
@@ -100,8 +100,8 @@
   <location path="SD_ProfitMarginByProductReport.aspx">
     <system.web>
       <authorization>
-        <allow roles="NIZING\業務部, NIZING\管理部"/>
-        <allow users="NIZING\mis, NIZING\chun"/>
+        <allow roles="NIZING\管理部"/>
+        <allow users="NIZING\mis"/>
         <deny users="*"/>
       </authorization>
     </system.web>
