--- a/Nizing/sunrise_employee_section/report/Web.config
+++ b/Nizing/sunrise_employee_section/report/Web.config
@@ -44,4 +44,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="GoOutForm.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\Domain Users"/>
+        <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
 </configuration>
