--- a/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/App.config
+++ b/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/App.config
@@ -1,17 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <connectionStrings>
-        <add name="OQSConnectionString"
-            connectionString="Data Source=SMARTERP;Initial Catalog=OQS;Persist Security Info=True;User ID=everyone;Password=123456;MultipleActiveResultSets=True"
-            providerName="System.Data.SqlClient" />
-        <add name="NZConnectionString"
-            connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456;MultipleActiveResultSets=True"
-            providerName="System.Data.SqlClient" />
-        <add name="ERP2ConnectionString"
-            connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456;MultipleActiveResultSets=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <connectionStrings>
+    <add name="OQSConnectionString"
+        connectionString="Data Source=SMARTERP;Initial Catalog=OQS;Persist Security Info=True;User ID=everyone;Password=123456;MultipleActiveResultSets=True"
+        providerName="System.Data.SqlClient" />
+    <add name="NZConnectionString"
+        connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456;MultipleActiveResultSets=True"
+        providerName="System.Data.SqlClient" />
+    <add name="ERP2ConnectionString"
+        connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456;MultipleActiveResultSets=True"
+        providerName="System.Data.SqlClient" />
+    <add name="SunrizeConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
