--- a/Nizing/hr360/mobile/Web.config
+++ b/Nizing/hr360/mobile/Web.config
@@ -4,6 +4,8 @@
     <add name="OQSConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=OQS;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
     <add name="NZConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
     <add name="ERP2ConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
+    <add name="SunrizeConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
+    <add name="SunrizeCustomConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE_CUSTOM;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
 
