--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -102,7 +102,7 @@
     <!--<httpRuntime executionTimeout="28800" maxRequestLength="4096" useFullyQualifiedRedirectUrl="false"
 minFreeThreads="8" minLocalRequestFreeThreads="4" appRequestQueueLimit="100" />-->
     <!--<customErrors mode="Off"/>-->
-    <customErrors mode="Off" defaultRedirect="/ErrorPage.aspx"/>
+    <customErrors mode="RemoteOnly" defaultRedirect="/ErrorPage.aspx"/>
     <sessionState mode="InProc" timeout="720"/>
   </system.web>
   <!--<system.webServer>
