--- a/Nizing/packages.config
+++ b/Nizing/packages.config
@@ -7,6 +7,7 @@
   <package id="jQuery" version="3.5.0.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.1" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net40" />
+  <package id="Moment.js" version="2.29.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="Svg" version="3.0.102" targetFramework="net472" />
   <package id="ZXing.Net.Mobile" version="2.4.1" targetFramework="net472" />
