--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -13,7 +13,7 @@
     <system.web>
       <authorization>
         <allow roles="NIZING\管理部, NIZING\生管處"/>
-        <allow users="NIZING\mis, NIZING\teflon"/>
+        <allow users="NIZING\mis, NIZING\teflon, NIZING\blwu"/>
       </authorization>
     </system.web>
   </location>
