--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -1,24 +1,24 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <appSettings>
-    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;"/>
+    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
   </appSettings>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <remove name="ChartImageHandler"/>
-      <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST" path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
+      <remove name="ChartImageHandler" />
+      <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST" path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </handlers>
   </system.webServer>
   <connectionStrings>
-    <add name="OQSConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=OQS;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
-    <add name="NZConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
-    <add name="ERP2ConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
-    <add name="SunrizeConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
+    <add name="OQSConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=OQS;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
+    <add name="NZConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
+    <add name="ERP2ConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
+    <add name="SunrizeConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--<system.webServer>
     <handlers>
@@ -35,43 +35,43 @@
   <location path="employee_section">
     <system.web>
       <authorization>
-        <deny users="NIZING\casper"/>
-        <allow roles="NIZING\Domain Users"/>
+        <deny users="NIZING\casper" />
+        <allow roles="NIZING\Domain Users" />
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
-        <deny users="*"/>
+        <deny users="*" />
       </authorization>
     </system.web>
   </location>
   <location path="revivify_employee_section">
     <system.web>
       <authorization>
-        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven"/>
-        <deny users="*"/>
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven" />
+        <deny users="*" />
       </authorization>
     </system.web>
   </location>
   <location path="neo_employee_section">
     <system.web>
       <authorization>
-        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven"/>
-        <deny users="*"/>
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven" />
+        <deny users="*" />
       </authorization>
     </system.web>
   </location>
   <location path="sunrise_employee_section">
     <system.web>
       <authorization>
-        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo, NIZING\carina.liu, NIZING\dakai"/>
-        <deny users="*"/>
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo, NIZING\carina.liu, NIZING\dakai" />
+        <deny users="*" />
       </authorization>
     </system.web>
   </location>
   <location path="oqs">
     <system.web>
       <authorization>
-        <allow roles="NIZING\Domain Users"/>
+        <allow roles="NIZING\Domain Users" />
         <!--<allow users="NIZING\kevin, NIZING\chrissy"/>-->
-        <deny users="*"/>
+        <deny users="*" />
       </authorization>
     </system.web>
   </location>
@@ -85,26 +85,26 @@
   -->
   <system.web>
     <httpHandlers>
-      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false"/>
+      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false" />
     </httpHandlers>
     <compilation debug="true" targetFramework="4.7.2">
       <assemblies>
-        <add assembly="System.DirectoryServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-        <add assembly="System.DirectoryServices.AccountManagement, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="System.DirectoryServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="System.DirectoryServices.AccountManagement, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
       </assemblies>
     </compilation>
     <!--<httpRuntime/>-->
     <pages controlRenderingCompatibilityVersion="4.0">
       <controls>
-        <add tagPrefix="ajaxToolkit" namespace="AjaxControlToolkit" assembly="AjaxControlToolkit"/>
-        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting" assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-      </controls>
+        
+        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting" assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" /></controls>
     </pages>
     <!--<httpRuntime executionTimeout="28800" maxRequestLength="4096" useFullyQualifiedRedirectUrl="false"
 minFreeThreads="8" minLocalRequestFreeThreads="4" appRequestQueueLimit="100" />-->
     <!--<customErrors mode="Off"/>-->
-    <customErrors mode="RemoteOnly" defaultRedirect="/ErrorPage.aspx"/>
-    <sessionState mode="InProc" timeout="720"/>
+    <customErrors mode="RemoteOnly" defaultRedirect="/ErrorPage.aspx" />
+    <sessionState mode="InProc" timeout="720" />
   </system.web>
   <!--<system.webServer>
     <rewrite>
