--- a/Nizing/sunrise_employee_section/report/Web.config
+++ b/Nizing/sunrise_employee_section/report/Web.config
@@ -53,4 +53,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="HR04.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部, NIZING\人事部"/>
+        <allow users="NIZING\mis"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
 </configuration>
