--- a/Intranet/sunrise_intranet/Web.config
+++ b/Intranet/sunrise_intranet/Web.config
@@ -17,6 +17,7 @@
   </system.webServer>-->
   <connectionStrings>
     <add name="SunrizeConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
+    <add name="SunriseConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRISE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <httpHandlers>
@@ -109,6 +110,15 @@
         <deny users="NIZING\dakai, NIZING\luluchang"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="HR04.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部, NIZING\人事部"/>
+        <allow users="NIZING\mis"/>
         <deny users="*"/>
       </authorization>
     </system.web>
