--- a/Intranet/sunrise_intranet/Web.config
+++ b/Intranet/sunrise_intranet/Web.config
@@ -123,4 +123,14 @@
       </authorization>
     </system.web>
   </location>
+  <!--會計部-->
+  <location path="ACC01.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部, NIZING\會計部"/>
+        <allow users="NIZING\mis, NIZING\mandy.lo"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
 </configuration>
