--- a/Intranet/sunrise_intranet/Web.config
+++ b/Intranet/sunrise_intranet/Web.config
@@ -124,7 +124,16 @@
     </system.web>
   </location>
   <!--會計部-->
-  <location path="ACC01.aspx">
+  <location path="ACC01-Sunrise.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部, NIZING\會計部"/>
+        <allow users="NIZING\mis, NIZING\mandy.lo"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="ACC01-Sunrize.aspx">
     <system.web>
       <authorization>
         <allow roles="NIZING\管理部, NIZING\會計部"/>
