--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -137,7 +137,7 @@
   <location path="PD03_RawMatsUsage.aspx">
     <system.web>
       <authorization>
-        <allow roles="NIZING\採購部, NIZING\管理部"/>
+        <allow roles="NIZING\採購部, NIZING\管理部, NIZING\生管處 "/>
         <allow users="NIZING\mis, NIZING\chun"/>
         <deny users="*"/>
       </authorization>
