--- a/Nizing/sunrise_employee_section/report/Web.config
+++ b/Nizing/sunrise_employee_section/report/Web.config
@@ -7,7 +7,7 @@
   <location path="PD_PurchaseInProgress.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai"/>
+        <deny users="NIZING\dakai, NIZING\wanda"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -17,7 +17,7 @@
   <location path="SD_PastCostsAndPrices.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai"/>
+        <deny users="NIZING\dakai, NIZING\wanda"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -27,7 +27,7 @@
   <location path="SD01.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai"/>
+        <deny users="NIZING\dakai, NIZING\wanda"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -37,16 +37,7 @@
   <location path="SD03_OrderInProgress.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai"/>
-        <allow roles="NIZING\Domain Users"/>
-        <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
-        <deny users="*"/>
-      </authorization>
-    </system.web>
-  </location>
-  <location path="GoOutForm.aspx">
-    <system.web>
-      <authorization>
+        <deny users="NIZING\dakai, NIZING\wanda"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
