--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -61,7 +61,7 @@
   <location path="sunrise_employee_section">
     <system.web>
       <authorization>
-        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo, NIZING\carina.liu, NIZING\dakai" />
+        <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo, NIZING\carina.liu, NIZING\dakai, NIZING\wanda" />
         <deny users="*" />
       </authorization>
     </system.web>
