--- a/Nizing/employee_section/report/Web.config
+++ b/Nizing/employee_section/report/Web.config
@@ -115,6 +115,15 @@
       </authorization>
     </system.web>
   </location>
+  <location path="SD_ReceivableReceived.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部"/>
+        <allow users="NIZING\mis"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <!--採購部-->
   <location path="PurchaseReport.aspx">
     <system.web>
