--- a/Intranet/sunrise_intranet/Web.config
+++ b/Intranet/sunrise_intranet/Web.config
@@ -67,7 +67,7 @@
   <location path="PD_PurchaseInProgress.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai, NIZING\luluchang"/>
+        <deny users="NIZING\dakai, NIZING\luluchang, NIZING\casper"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -87,7 +87,7 @@
   <location path="SD01.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai, NIZING\luluchang"/>
+        <deny users="NIZING\dakai, NIZING\luluchang, NIZING\casper"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -97,7 +97,7 @@
   <location path="SD03_OrderInProgress.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai, NIZING\luluchang"/>
+        <deny users="NIZING\dakai, NIZING\luluchang, NIZING\casper"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -107,7 +107,7 @@
   <location path="PD_PurchaseCostCalculator.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai, NIZING\luluchang"/>
+        <deny users="NIZING\dakai, NIZING\luluchang, NIZING\casper"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
