--- a/Nizing/sunrise_employee_section/report/Web.config
+++ b/Nizing/sunrise_employee_section/report/Web.config
@@ -7,7 +7,7 @@
   <location path="PD_PurchaseInProgress.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai, NIZING\wanda"/>
+        <deny users="NIZING\dakai, NIZING\wanda, NIZING\casper"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -27,7 +27,7 @@
   <location path="SD01.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai, NIZING\wanda"/>
+        <deny users="NIZING\dakai, NIZING\wanda, NIZING\casper"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
@@ -37,7 +37,7 @@
   <location path="SD03_OrderInProgress.aspx">
     <system.web>
       <authorization>
-        <deny users="NIZING\dakai, NIZING\wanda"/>
+        <deny users="NIZING\dakai, NIZING\wanda, NIZING\casper"/>
         <allow roles="NIZING\Domain Users"/>
         <!--<allow users="NIZING\mis, NIZING\kevin"/>-->
         <deny users="*"/>
