業績獎金計算

--- a/Nizing/employee_section/report/Web.config
+++ b/Nizing/employee_section/report/Web.config
@@ -106,15 +106,6 @@
       </authorization>
     </system.web>
   </location>
-  <location path="SD_SalesBonusCalculator.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="NIZING\管理部"/>
-        <allow users="NIZING\mis"/>
-        <deny users="*"/>
-      </authorization>
-    </system.web>
-  </location>
   <location path="SD_ReceivableReceived.aspx">
     <system.web>
       <authorization>
@@ -203,6 +194,16 @@
       <authorization>
         <allow roles="NIZING\管理部"/>
         <allow users="NIZING\mis, NIZING\aris, NIZING\chun, NIZING\yoshida, NIZING\sandy, NIZING\marty"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <!--管理部-->
+  <location path="SD_SalesBonusCalculator.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="NIZING\管理部"/>
+        <allow users="NIZING\mis"/>
         <deny users="*"/>
       </authorization>
     </system.web>
