--- a/Intranet/nizing_intranet/Web.config
+++ b/Intranet/nizing_intranet/Web.config
@@ -147,7 +147,7 @@
     <system.web>
       <authorization>
         <allow roles="NIZING\採購部, NIZING\管理部, NIZING\生管處 "/>
-        <allow users="NIZING\mis, NIZING\chun"/>
+        <allow users="NIZING\mis, NIZING\chun, NIZING\zack.lai"/>
         <deny users="*"/>
       </authorization>
     </system.web>
