將車材與車業業績排名表分開

--- a/Intranet/Web.config
+++ b/Intranet/Web.config
@@ -68,8 +68,7 @@
     <system.web>
       <authorization>
         <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper
-               , NIZING\mandy.lo, NIZING\carina.liu, NIZING\dakai
-               , NIZING\luluchang" />
+               , NIZING\dakai, NIZING\luluchang" />
         <deny users="*" />
       </authorization>
     </system.web>
