增加網站新聞管理功能

--- a/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/App.config
+++ b/WinFormApp/WinFormAppDev/NIZING_BACKEND_Data_Config/App.config
@@ -11,6 +11,9 @@
         connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456;MultipleActiveResultSets=True"
         providerName="System.Data.SqlClient" />
     <add name="SunrizeConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=SUNRIZE;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient"/>
+    <add name="WEBConnectionString"
+        connectionString="Data Source=SMARTERP;Initial Catalog=Website;Persist Security Info=True;User ID=everyone;Password=123456;MultipleActiveResultSets=True"
+        providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
