--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -15,6 +15,7 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
+    <add name="WebsiteConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=Website;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
     <add name="OQSConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=OQS;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
     <add name="NZConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
     <add name="ERP2ConnectionString" connectionString="Data Source=SMARTERP;Initial Catalog=NZ_ERP2;Persist Security Info=True;User ID=everyone;Password=123456" providerName="System.Data.SqlClient" />
