--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -118,17 +118,18 @@
 				<!--50MB-->
 			</requestFiltering>
 		</security>
-		<!--<rewrite>
+		<rewrite>
 			<rules>
-				<clear />
-				<rule name="Redirect to https" stopProcessing="true">
-					<match url=".*" />
+				<rule name="HTTP to HTTPS redirect" stopProcessing="true">
+					<match url="(.*)" />
 					<conditions>
+						<add input="{HTTP_HOST}" pattern="^localhost(:\d+)?$" negate="true"/>
 						<add input="{HTTPS}" pattern="off" ignoreCase="true" />
 					</conditions>
-					<action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" appendQueryString="false" />
+					<action type="Redirect" redirectType="Found"
+						url="https://{HTTP_HOST}/{R:1}" />
 				</rule>
 			</rules>
-		</rewrite>-->
+		</rewrite>
 	</system.webServer>
 </configuration>
