--- a/Intranet/Web.config
+++ b/Intranet/Web.config
@@ -68,7 +68,7 @@
     <system.web>
       <authorization>
         <allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper
-               , NIZING\dakai, NIZING\luluchang" />
+               , NIZING\dakai, NIZING\luluchang, NIZING\mandy.lo" />
         <deny users="*" />
       </authorization>
     </system.web>
