--- a/Nizing/sunrise_employee_section/Web.config
+++ b/Nizing/sunrise_employee_section/Web.config
@@ -46,4 +46,52 @@
   <system.web>
     <!--<customErrors mode="Off"/>-->
   </system.web>
+	<location path="HR04.aspx">
+		<system.web>
+			<authorization>
+				<deny users="NIZING\casper" />
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="PD_PurchaseInProgress.aspx">
+		<system.web>
+			<authorization>
+				<deny users="NIZING\casper" />
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="PD_PastCostsAndPrices.aspx">
+		<system.web>
+			<authorization>
+				<deny users="NIZING\casper" />
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="SD01.aspx">
+		<system.web>
+			<authorization>
+				<deny users="NIZING\casper" />
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="SD01Car.aspx">
+		<system.web>
+			<authorization>
+				<deny users="NIZING\casper" />
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
+	<location path="SD03_OrderInProgress.aspx">
+		<system.web>
+			<authorization>
+				<deny users="NIZING\casper" />
+				<allow users="*"/>
+			</authorization>
+		</system.web>
+	</location>
 </configuration>
