--- a/Intranet/sunrise_intranet/Web.config
+++ b/Intranet/sunrise_intranet/Web.config
@@ -128,7 +128,7 @@
     <system.web>
       <authorization>
         <allow roles="NIZING\管理部, NIZING\會計部"/>
-        <allow users="NIZING\mis, NIZING\mandy.lo"/>
+        <allow users="NIZING\mis, NIZING\mandy.lo, NIZING\lisa"/>
         <deny users="*"/>
       </authorization>
     </system.web>
@@ -137,7 +137,7 @@
     <system.web>
       <authorization>
         <allow roles="NIZING\管理部, NIZING\會計部"/>
-        <allow users="NIZING\mis, NIZING\mandy.lo"/>
+        <allow users="NIZING\mis, NIZING\mandy.lo, NIZING\lisa"/>
         <deny users="*"/>
       </authorization>
     </system.web>
