--- a/Nizing/Web.config
+++ b/Nizing/Web.config
@@ -62,7 +62,7 @@
 	<location path="sunrise_employee_section">
 		<system.web>
 			<authorization>
-				<allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo, NIZING\carina.liu, NIZING\dakai, NIZING\wanda" />
+				<allow users="NIZING\mis, NIZING\kevin, NIZING\chrissy, NIZING\kelven, NIZING\casper, NIZING\mandy.lo, NIZING\dakai, NIZING\wanda, NIZING\lisa" />
 				<deny users="*" />
 			</authorization>
 		</system.web>
